--- a/.github/workflows/versionRelease.yml
+++ b/.github/workflows/versionRelease.yml
@@ -1,5 +1,5 @@
 name: "Version Releases"
-run-name: "Version Releases v${{ inputs.version }})"
+run-name: "Version Releases v${{ inputs.version }}"
 
 on:
   workflow_dispatch:
