--- a/.github/workflows/versionRelease.yml
+++ b/.github/workflows/versionRelease.yml
@@ -30,8 +30,10 @@ jobs:
 
       - name: Checkout Repo
         uses: actions/checkout@v4
-        with:
-          token: ${{ steps.app_token.outputs.app_token }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        # with:
+        #   token: ${{ steps.app_token.outputs.app_token }}
 
       - name: Extract branch name
         id: extract_branch
