--- a/.github/workflows/buildDeploy.yml
+++ b/.github/workflows/buildDeploy.yml
@@ -6,6 +6,9 @@ name: Build & Deploy site to GH Pages
 on:
   release:
     types: [published]
+  push:
+    tags:
+      - v*
 
 # Change the above to this if you want to build and deploy on every push, but
 # be mindful of overuse. Free accounts have a limited amount of
