--- a/.github/workflows/versionRelease.yml
+++ b/.github/workflows/versionRelease.yml
@@ -20,3 +20,5 @@ jobs:
     with:
       version: ${{ github.event.inputs.version }}
       version_script: "npm run version:changelog --"
+    secrets:
+      DEVOPS_PAT: ${{ secrets.DEVOPS_PAT }}
