--- a/.github/workflows/buildDeploy.yml
+++ b/.github/workflows/buildDeploy.yml
@@ -2,24 +2,15 @@
 # Go to Settings -> Pages -> Build and deployment -> Set the Source to "Github Actions".
 name: Build & Deploy site to GH Pages
 
+
 # Will fire when a new release is published
 on:
+  workflow_dispatch:
+  # Automated Deployments
   release:
     types: [published]
   push:
-    tags:
-      - v*
-
-# Change the above to this if you want to build and deploy on every push, but
-# be mindful of overuse. Free accounts have a limited amount of
-# compute time per month.
-# on:
-#   push:
-#     branches:
-#       - main
-
-  # Allows you to run this workflow manually from the Actions tab
-  # workflow_dispatch:
+    tags: [v*]
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
