--- a/.github/workflows/buildDeploy.yml
+++ b/.github/workflows/buildDeploy.yml
@@ -7,8 +7,8 @@ name: Build & Deploy site to GH Pages
 on:
   workflow_dispatch:
   # Automated Deployments
-  release:
-    types: [published]
+  # release:
+  #   types: [published]
   push:
     tags: [v*]
 
