--- a/.github/workflows/buildDeploy.yml
+++ b/.github/workflows/buildDeploy.yml
@@ -5,12 +5,13 @@ name: Build & Deploy site to GH Pages
 
 # Will fire when a new release is published
 on:
-  workflow_call:
+  #workflow_dispatch:
   # Automated Deployments
-  # release:
-  #   types: [published]
-  push:
-    tags: [v*]
+  workflow_call:
+  release:
+    types: [published]
+  # push:
+  #   tags: [v*]
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
