--- a/.github/workflows/versionRelease.yml
+++ b/.github/workflows/versionRelease.yml
@@ -24,6 +24,6 @@ jobs:
     secrets:
       DEVOPS_PAT: ${{ secrets.DEVOPS_PAT }}
 
-  publish:
-    needs: version-bump
-    uses: crajapakshe/crajapakshe.github.io/.github/workflows/buildDeploy.yml@main
+  # publish:
+  #   needs: version-bump
+  #   uses: crajapakshe/crajapakshe.github.io/.github/workflows/buildDeploy.yml@main
