--- a/.github/workflows/versionRelease.yml
+++ b/.github/workflows/versionRelease.yml
@@ -1,5 +1,5 @@
 name: "Version Releases"
-run-name: "Version Releases v${{ inputs.version }}"
+run-name: "Version Releases v${{ inputs.version }} by ${{ github.actor }}"
 
 on:
   workflow_dispatch:
@@ -17,7 +17,7 @@ jobs:
     permissions:
       contents: write
       pull-requests: write
-    uses: crajapakshe/devops-tools/.github/workflows/versionRelease.yml@main
+    uses: crajapakshe/devops-tools/.github/workflows/version-release.yml@main
     with:
       version: ${{ github.event.inputs.version }}
       version_script: "npm run version:changelog --"
